# CppSharp

./: .gitignore
src/: CppSharp.sln
src/CLI/: CLI.csproj
src/Core/: Core.csproj
src/CppParser/: CMakeLists.txt  Parser.cpp
src/Generator/: Generator.csproj
src/Generator/Passes/: SymbolsCodeGenerator.cs
src/Parser/: Parser.csproj
